refactor: bind setting oidc

--- a/ui/storefront/Properties/launchSettings.json
+++ b/ui/storefront/Properties/launchSettings.json
@@ -5,7 +5,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:4001"
@@ -14,7 +16,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:4000"
@@ -25,7 +29,9 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "publishAllPorts": true,
       "useSSL": true
