--- a/src/RookieShop.ApiService/Properties/launchSettings.json
+++ b/src/RookieShop.ApiService/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317"
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:9001"
@@ -18,7 +19,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317"
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:9000"
@@ -29,7 +31,8 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTP_PORTS": "8080",
-        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317"
+        "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
+        "OTEL_EXPORTER_OTLP_API_KEY": "NashTech@2024"
       },
       "publishAllPorts": true
     }
