fix: issue has a high impact on the maintainability of your software

--- a/ui/backoffice/Dockerfile
+++ b/ui/backoffice/Dockerfile
@@ -1,20 +1,15 @@
 FROM oven/bun:1.1.8-slim
 
-ARG UID=1000
-ARG GID=1000
-RUN groupadd -g $GID nodejs && useradd -m -u $UID -g $GID nodejs
-
 WORKDIR /app/next-app
 
 COPY package.json ./
 COPY bun.lockb ./
-
 RUN bun install
 
-USER nodejs
-
-COPY --chown=nodejs:nodejs . .
+COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED 1
+
+USER bun
 
 CMD bun dev
