--- a/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
+++ b/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="xunit" />
 		<PackageReference Include="xunit.runner.visualstudio" />
+		<PackageReference Include="AutoBogus.Moq" />
 		<PackageReference Include="FluentAssertions" />
 		<PackageReference Include="ReportGenerator" />
 	</ItemGroup>
@@ -27,7 +28,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Using Include="Moq" />
 		<Using Include="Xunit" />
+		<Using Include="FluentAssertions" />
 	</ItemGroup>
 
 	<ItemGroup>
