--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/bun": "latest",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
