test: add customer usecases test

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "lint-staged": {
+    "*.cs": "dotnet format --include"
   }
 }
