--- a/ui/storefront/RookieShop.Storefront.csproj
+++ b/ui/storefront/RookieShop.Storefront.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="Refit.HttpClientFactory" />
 		<PackageReference Include="Ardalis.ListStartupServices" />
+		<PackageReference Include="AspNetCore.HealthChecks.Uris" />
 		<PackageReference Include="Microsoft.TypeScript.MSBuild" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
 	</ItemGroup>
