--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -83,6 +83,8 @@
 		<!-- Polly -->
 		<PackageVersion Include="Polly" Version="$(PollyVersion)" />
 		<PackageVersion Include="Polly.Extensions" Version="$(PollyVersion)" />
+		<!-- Aspire -->
+		<PackageVersion Include="Aspire.Hosting.AppHost" Version="8.0.0" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
