--- a/src/RookieShop.AppHost/RookieShop.AppHost.csproj
+++ b/src/RookieShop.AppHost/RookieShop.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -8,12 +8,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Aspire.Hosting.AppHost" />
+		<PackageReference Include="Aspire.Hosting.NodeJs" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\ui\storefront\RookieShop.Storefront.csproj" />
-	  <ProjectReference Include="..\RookieShop.ApiService\RookieShop.ApiService.csproj" />
-	  <ProjectReference Include="..\RookieShop.IdentityService\RookieShop.IdentityService.csproj" />
+		<ProjectReference Include="..\..\ui\storefront\RookieShop.Storefront.csproj" />
+		<ProjectReference Include="..\RookieShop.ApiService\RookieShop.ApiService.csproj" />
+		<ProjectReference Include="..\RookieShop.IdentityService\RookieShop.IdentityService.csproj" />
 	</ItemGroup>
 
 </Project>
