--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,8 +8,14 @@
 		<TestcontainersVersion>3.8.0</TestcontainersVersion>
 		<XabarilVersion>8.0.1</XabarilVersion>
 		<PollyVersion>8.4.0</PollyVersion>
+		<AspireVersion>8.0.1</AspireVersion>
 	</PropertyGroup>
 	<ItemGroup>
+		<!-- Aspire -->
+		<PackageVersion Include="Aspire.Hosting.Redis" Version="$(AspireVersion)" />
+		<PackageVersion Include="Aspire.Hosting.NodeJs" Version="$(AspireVersion)" />
+		<PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
+		<PackageVersion Include="Aspire.StackExchange.Redis" Version="$(AspireVersion)" />
 		<!-- Ardalis -->
 		<PackageVersion Include="Ardalis.GuardClauses" Version="4.5.0" />
 		<PackageVersion Include="Ardalis.Result.AspNetCore" Version="9.0.0" />
@@ -30,7 +36,6 @@
 		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="$(AspnetVersion)" />
-		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="$(AspnetVersion)" />
 		<!-- Entity Framework Core -->
 		<PackageVersion Include="Microsoft.EntityFrameworkCore" Version="$(EfVersion)" />
 		<PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="$(EfVersion)" />
@@ -83,9 +88,6 @@
 		<!-- Polly -->
 		<PackageVersion Include="Polly" Version="$(PollyVersion)" />
 		<PackageVersion Include="Polly.Extensions" Version="$(PollyVersion)" />
-		<!-- Aspire -->
-		<PackageVersion Include="Aspire.Hosting.NodeJs" Version="8.0.1" />
-		<PackageVersion Include="Aspire.Hosting.AppHost" Version="8.0.1" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
