--- a/src/RookieShop.ApiService/RookieShop.ApiService.csproj
+++ b/src/RookieShop.ApiService/RookieShop.ApiService.csproj
@@ -9,10 +9,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Ardalis.ListStartupServices" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<ContainerEnvironmentVariable Include="ASPNETCORE_HTTPS_PORTS">
 			<Value>8081</Value>
 		</ContainerEnvironmentVariable>
@@ -20,6 +16,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\RookieShop.Application\RookieShop.Application.csproj" />
+		<ProjectReference Include="..\RookieShop.ServiceDefaults\RookieShop.ServiceDefaults.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
