--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -29,8 +29,8 @@
 		<PackageReference Include="Marten" />
 		<PackageReference Include="Scrutor" />
 		<PackageReference Include="Stripe.net" />
-		<PackageReference Include="Azure.Storage.Blobs" />
 		<PackageReference Include="Quartz.Extensions.Hosting" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" />
 	</ItemGroup>
 
 	<ItemGroup>
