feat: adjust product response

--- a/ui/storefront/RookieShop.Storefront.csproj
+++ b/ui/storefront/RookieShop.Storefront.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Microsoft.TypeScript.MSBuild" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" />
 	</ItemGroup>
 
 	<ItemGroup>
