test: add app host test

--- a/tests/RookieShop.IntegrationTests/RookieShop.IntegrationTests.csproj
+++ b/tests/RookieShop.IntegrationTests/RookieShop.IntegrationTests.csproj
@@ -43,6 +43,7 @@
 	<ItemGroup>
 		<Using Include="Xunit" />
 		<Using Include="FluentAssertions" />
+		<Using Include="Ardalis.HttpClientTestExtensions" />
 	</ItemGroup>
 
 	<ItemGroup>
