--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
 		<PackageVersion Include="Aspire.Hosting.NodeJs" Version="$(AspireVersion)" />
 		<PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
 		<PackageVersion Include="Aspire.Hosting.Azure.Storage" Version="$(AspireVersion)" />
+		<PackageVersion Include="Aspire.Hosting.Testing" Version="$(AspireVersion)" />
 		<PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="$(AspireVersion)" />
 		<PackageVersion Include="Aspire.StackExchange.Redis" Version="$(AspireVersion)" />
 		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="8.5.0" />
